fixed background, area of comp.
background now streches to aspect ratio.
mon-tue-wed comp fill out the width area properly
Today box covers the rest of the weatherbox - 75%

--- a/src/components/weatherbox/style.less
+++ b/src/components/weatherbox/style.less
@@ -2,7 +2,7 @@
 
 /* the next 3 days boxes */
 .weatherBox > div:first-child > div {
-    width: 33%;
+    width: 33.33%;
     float: left;
     background: orange;
     padding: 2em;
@@ -19,5 +19,6 @@
 }
 
 .today {
-    
+    padding-top: 15%;
+    height: 100%;
 }
